--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    
+    "graphql": "^16.0.0",
+    "apollo-server-express": "^3.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
